# Copyright 2017 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "cylinder"
version = "0.1.2"
authors = ["Bitwise IO, Inc.", "Cargill Incorporated", "Intel Corporation"]
edition = "2018"
license = "Apache-2.0"
readme = "../README.md"
description = """\
    Cylinder is a cryptographic signing library with CLI tools.
"""
repository = "https://github.com/cargill/cylinder"

[features]
default = []

stable = [
    "default",
    "pem",
]

experimental = [
  # The experimental feature extends stable:
  "stable",
  # The following features are experimental:
  "hash",
  "jwt",
]

hash = ["sha2"]
jwt = []
# Add support for loading PEM encoded private keys
pem = ["openssl"]

[dependencies]
openssl = { version = "0.10", optional = true }
rand = "0.7"
rust-crypto = "0.2"
secp256k1 = "0.19"
sha2 = { version = "0.9", optional = true }

[package.metadata.docs.rs]
features = [
  "stable",
  "experimental"
]
