# Copyright 2017 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "cylinder"
version = "0.2.3"
authors = ["Bitwise IO, Inc.", "Cargill Incorporated", "Intel Corporation"]
edition = "2018"
license = "Apache-2.0"
readme = "../README.md"
description = """\
    Cylinder is a cryptographic signing library with CLI tools.
"""
repository = "https://github.com/cargill/cylinder"

[features]
default = []

stable = [
    "default",
    "jwt",
    "key-load",
    "pem",
]

experimental = [
  # The experimental feature extends stable:
  "stable",
  # The following features are experimental:
  "hash",
]

hash = ["sha2"]
jwt = ["json", "base64"]
# Add support for loading PEM encoded private keys
pem = ["openssl"]
key-load = ["dirs", "log", "whoami", "tempdir"]

[dependencies]
base64 = { version = "0.13", optional = true }
dirs = { version = "4", optional = true }
json = { version = "0.12", optional = true }
log = { version = "0.4", optional = true }
openssl = { version = "0.10", optional = true }
rand = "0.8"
rust-crypto = "0.2"
secp256k1 = "0.20"
sha2 = { version = "0.9", optional = true }
tempdir = { version = "0.3", optional = true }
whoami = { version = "1.1", optional = true }

[dev-dependencies]
serial_test = "0.5"

[package.metadata.docs.rs]
features = [
  "stable",
  "experimental"
]
